@@ -10,7 +10,6 @@ import java.nio.channels.ReadableByteChannel;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.function.Predicate;
@@ -30,6 +29,7 @@ import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.inventory.meta.SkullMeta;
 
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import org.apache.commons.math4.core.jdkmath.AccurateMath;
@@ -184,6 +184,19 @@ public class Util {
 		return AccurateMath.toDegrees(AccurateMath.atan2(-vector.getX(), vector.getZ()));
 	}
 
+	public static void playHurtEffect(@NotNull LivingEntity receiver, @Nullable LivingEntity source) {
+		float angle = 0;
+		if (source != null && !receiver.equals(source)) {
+			// Get horizontal directed angle between the receiver's direction and the source.
+			Vector first = receiver.getLocation().getDirection();
+			Vector second = source.getLocation().toVector().subtract(receiver.getLocation().toVector());
+			double angrad = AccurateMath.atan2(second.getZ(), second.getX()) - AccurateMath.atan2(first.getZ(), first.getX());
+			angle = (float) AccurateMath.toDegrees(angrad);
+			if (angle < 0) angle += 360;
+		}
+		MagicSpells.getVolatileCodeHandler().playHurtAnimation(receiver, angle);
+	}
+
 	public static boolean arrayContains(int[] array, int value) {
 		for (int i : array) {
 			if (i == value) return true;
@@ -240,7 +253,7 @@ public class Util {
 		for (String word : words) {
 			if (word.isEmpty()) continue;
 			if (max > 0 && list.size() == max - 1) {
-				if (building.length() > 0) building.append(" ");
+				if (!building.isEmpty()) building.append(" ");
 				building.append(word);
 				continue;
 			}
@@ -272,7 +285,7 @@ public class Util {
 			building.append(' ').append(word);
 		}
 
-		if (building.length() > 0) list.add(building.toString());
+		if (!building.isEmpty()) list.add(building.toString());
 
 		return list.toArray(new String[0]);
 	}
@@ -511,7 +524,7 @@ public class Util {
 	}
 
 	public static String flattenLineBreaks(String raw) {
-		return raw.replaceAll("\n", "\\n");
+		return raw.replaceAll("\n", "\\\\n");
 	}
 
 	public static <T> boolean containsParallel(Collection<T> elements, Predicate<? super T> predicate) {
@@ -522,22 +535,12 @@ public class Util {
 		return containsParallel(map.values(), predicate);
 	}
 
-	public static <T> void forEachOrdered(Collection<T> collection, Consumer<? super T> consumer) {
-		collection.stream().forEachOrdered(consumer);
-	}
-
-	public static <T> void forEachValueOrdered(Map<?, T> map, Consumer<? super T> consumer) {
-		forEachOrdered(map.values(), consumer);
-	}
-
 	public static void forEachPlayerOnline(Consumer<? super Player> consumer) {
-		forEachOrdered(Bukkit.getOnlinePlayers(), consumer);
+		Bukkit.getOnlinePlayers().forEach(consumer);
 	}
 
 	public static int clampValue(int min, int max, int value) {
-		if (value < min) return min;
-		if (value > max) return max;
-		return value;
+		return Math.min(Math.max(value, min), max);
 	}
 
 	public static <C extends Collection<Material>> C getMaterialList(List<String> strings, Supplier<C> supplier) {
@@ -794,7 +797,7 @@ public class Util {
 	}
 
 	public static String getSkinData(Player player) {
-		List<ProfileProperty> skins = player.getPlayerProfile().getProperties().stream().filter(prop -> prop.getName().equals("textures")).collect(Collectors.toList());
+		List<ProfileProperty> skins = player.getPlayerProfile().getProperties().stream().filter(prop -> prop.getName().equals("textures")).toList();
 		ProfileProperty latestSkin = skins.get(0);
 		return "Skin: " + latestSkin.getValue() + "\nSignature: " + latestSkin.getSignature();
 	}
